--- a/VEDA-1/VEDA1.ui
+++ b/VEDA-1/VEDA1.ui
@@ -115,7 +115,7 @@
         <string notr="true">background-color: rgba(255, 255, 255, 51);
 border-radius: 26px</string>
        </property>
-       <widget class="QFrame" name="photoUser_2">
+       <widget class="QPushButton" name="fav_1">
         <property name="geometry">
          <rect>
           <x>5</x>
@@ -124,43 +124,25 @@ border-radius: 26px</string>
           <height>44</height>
          </rect>
         </property>
-        <property name="maximumSize">
-         <size>
-          <width>966</width>
-          <height>54</height>
-         </size>
-        </property>
         <property name="styleSheet">
          <string notr="true">background-color: #A3EC5A;
 border-radius: 22px</string>
         </property>
-        <property name="frameShape">
-         <enum>QFrame::StyledPanel</enum>
+        <property name="text">
+         <string/>
         </property>
-        <property name="frameShadow">
-         <enum>QFrame::Raised</enum>
+        <property name="icon">
+         <iconset resource="VEDA1.qrc">
+          <normaloff>:/icons/icons/user.png</normaloff>:/icons/icons/user.png</iconset>
         </property>
-        <widget class="QLabel" name="label_15">
-         <property name="geometry">
-          <rect>
-           <x>9</x>
-           <y>8</y>
-           <width>25</width>
-           <height>25</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string/>
-         </property>
-         <property name="pixmap">
-          <pixmap resource="VEDA1.qrc">:/icons/icons/user.png</pixmap>
-         </property>
-         <property name="scaledContents">
-          <bool>true</bool>
-         </property>
-        </widget>
+        <property name="iconSize">
+         <size>
+          <width>25</width>
+          <height>25</height>
+         </size>
+        </property>
        </widget>
-       <widget class="QFrame" name="photoUser_3">
+       <widget class="QPushButton" name="fav_2">
         <property name="geometry">
          <rect>
           <x>5</x>
@@ -169,43 +151,25 @@ border-radius: 22px</string>
           <height>44</height>
          </rect>
         </property>
-        <property name="maximumSize">
-         <size>
-          <width>966</width>
-          <height>54</height>
-         </size>
-        </property>
         <property name="styleSheet">
          <string notr="true">background-color: #A3EC5A;
 border-radius: 22px</string>
         </property>
-        <property name="frameShape">
-         <enum>QFrame::StyledPanel</enum>
+        <property name="text">
+         <string/>
         </property>
-        <property name="frameShadow">
-         <enum>QFrame::Raised</enum>
+        <property name="icon">
+         <iconset resource="VEDA1.qrc">
+          <normaloff>:/icons/icons/user.png</normaloff>:/icons/icons/user.png</iconset>
         </property>
-        <widget class="QLabel" name="label_16">
-         <property name="geometry">
-          <rect>
-           <x>9</x>
-           <y>8</y>
-           <width>25</width>
-           <height>25</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string/>
-         </property>
-         <property name="pixmap">
-          <pixmap resource="VEDA1.qrc">:/icons/icons/user.png</pixmap>
-         </property>
-         <property name="scaledContents">
-          <bool>true</bool>
-         </property>
-        </widget>
+        <property name="iconSize">
+         <size>
+          <width>25</width>
+          <height>25</height>
+         </size>
+        </property>
        </widget>
-       <widget class="QFrame" name="photoUser_4">
+       <widget class="QPushButton" name="fav_3">
         <property name="geometry">
          <rect>
           <x>5</x>
@@ -214,43 +178,25 @@ border-radius: 22px</string>
           <height>44</height>
          </rect>
         </property>
-        <property name="maximumSize">
-         <size>
-          <width>966</width>
-          <height>54</height>
-         </size>
-        </property>
         <property name="styleSheet">
          <string notr="true">background-color: #A3EC5A;
 border-radius: 22px</string>
         </property>
-        <property name="frameShape">
-         <enum>QFrame::StyledPanel</enum>
+        <property name="text">
+         <string/>
         </property>
-        <property name="frameShadow">
-         <enum>QFrame::Raised</enum>
+        <property name="icon">
+         <iconset resource="VEDA1.qrc">
+          <normaloff>:/icons/icons/user.png</normaloff>:/icons/icons/user.png</iconset>
         </property>
-        <widget class="QLabel" name="label_17">
-         <property name="geometry">
-          <rect>
-           <x>9</x>
-           <y>8</y>
-           <width>25</width>
-           <height>25</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string/>
-         </property>
-         <property name="pixmap">
-          <pixmap resource="VEDA1.qrc">:/icons/icons/user.png</pixmap>
-         </property>
-         <property name="scaledContents">
-          <bool>true</bool>
-         </property>
-        </widget>
+        <property name="iconSize">
+         <size>
+          <width>25</width>
+          <height>25</height>
+         </size>
+        </property>
        </widget>
-       <widget class="QFrame" name="photoUser_5">
+       <widget class="QPushButton" name="fav_4">
         <property name="geometry">
          <rect>
           <x>5</x>
@@ -259,43 +205,25 @@ border-radius: 22px</string>
           <height>44</height>
          </rect>
         </property>
-        <property name="maximumSize">
-         <size>
-          <width>966</width>
-          <height>54</height>
-         </size>
-        </property>
         <property name="styleSheet">
          <string notr="true">background-color: #A3EC5A;
 border-radius: 22px</string>
         </property>
-        <property name="frameShape">
-         <enum>QFrame::StyledPanel</enum>
+        <property name="text">
+         <string/>
         </property>
-        <property name="frameShadow">
-         <enum>QFrame::Raised</enum>
+        <property name="icon">
+         <iconset resource="VEDA1.qrc">
+          <normaloff>:/icons/icons/user.png</normaloff>:/icons/icons/user.png</iconset>
         </property>
-        <widget class="QLabel" name="label_18">
-         <property name="geometry">
-          <rect>
-           <x>9</x>
-           <y>8</y>
-           <width>25</width>
-           <height>25</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string/>
-         </property>
-         <property name="pixmap">
-          <pixmap resource="VEDA1.qrc">:/icons/icons/user.png</pixmap>
-         </property>
-         <property name="scaledContents">
-          <bool>true</bool>
-         </property>
-        </widget>
+        <property name="iconSize">
+         <size>
+          <width>25</width>
+          <height>25</height>
+         </size>
+        </property>
        </widget>
-       <widget class="QFrame" name="photoUser_6">
+       <widget class="QPushButton" name="fav_5">
         <property name="geometry">
          <rect>
           <x>5</x>
@@ -304,41 +232,23 @@ border-radius: 22px</string>
           <height>44</height>
          </rect>
         </property>
-        <property name="maximumSize">
-         <size>
-          <width>966</width>
-          <height>54</height>
-         </size>
-        </property>
         <property name="styleSheet">
          <string notr="true">background-color: #A3EC5A;
 border-radius: 22px</string>
         </property>
-        <property name="frameShape">
-         <enum>QFrame::StyledPanel</enum>
+        <property name="text">
+         <string/>
         </property>
-        <property name="frameShadow">
-         <enum>QFrame::Raised</enum>
+        <property name="icon">
+         <iconset resource="VEDA1.qrc">
+          <normaloff>:/icons/icons/user.png</normaloff>:/icons/icons/user.png</iconset>
         </property>
-        <widget class="QLabel" name="label_19">
-         <property name="geometry">
-          <rect>
-           <x>9</x>
-           <y>8</y>
-           <width>25</width>
-           <height>25</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string/>
-         </property>
-         <property name="pixmap">
-          <pixmap resource="VEDA1.qrc">:/icons/icons/user.png</pixmap>
-         </property>
-         <property name="scaledContents">
-          <bool>true</bool>
-         </property>
-        </widget>
+        <property name="iconSize">
+         <size>
+          <width>25</width>
+          <height>25</height>
+         </size>
+        </property>
        </widget>
       </widget>
       <widget class="QScrollBar" name="verticalScrollBar">
@@ -699,9 +609,9 @@ color:Black;
       <widget class="QFrame" name="notif">
        <property name="geometry">
         <rect>
-         <x>520</x>
+         <x>490</x>
          <y>0</y>
-         <width>106</width>
+         <width>171</width>
          <height>54</height>
         </rect>
        </property>
@@ -721,94 +631,50 @@ border-radius: 27px;</string>
        <property name="frameShadow">
         <enum>QFrame::Raised</enum>
        </property>
-       <widget class="QFrame" name="photoUser">
+       <widget class="QPushButton" name="main_ico_1">
         <property name="geometry">
          <rect>
-          <x>60</x>
-          <y>7</y>
-          <width>40</width>
-          <height>40</height>
+          <x>5</x>
+          <y>5</y>
+          <width>44</width>
+          <height>44</height>
          </rect>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>966</width>
-          <height>54</height>
-         </size>
         </property>
         <property name="styleSheet">
          <string notr="true">background-color: #A3EC5A;
-border-radius: 20px</string>
-        </property>
-        <property name="frameShape">
-         <enum>QFrame::StyledPanel</enum>
-        </property>
-        <property name="frameShadow">
-         <enum>QFrame::Raised</enum>
-        </property>
-        <widget class="QLabel" name="user_ico">
-         <property name="geometry">
-          <rect>
-           <x>0</x>
-           <y>0</y>
-           <width>40</width>
-           <height>40</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string/>
-         </property>
-         <property name="pixmap">
-          <pixmap resource="VEDA1.qrc">:/icons/icons/user.png</pixmap>
-         </property>
-         <property name="scaledContents">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </widget>
-       <widget class="QLabel" name="label_20">
-        <property name="geometry">
-         <rect>
-          <x>15</x>
-          <y>7</y>
-          <width>35</width>
-          <height>38</height>
-         </rect>
+border-radius: 22px</string>
         </property>
         <property name="text">
          <string/>
         </property>
-        <property name="pixmap">
-         <pixmap resource="VEDA1.qrc">:/icons/icons/noti.png</pixmap>
+        <property name="icon">
+         <iconset resource="VEDA1.qrc">
+          <normaloff>:/icons/icons/user.png</normaloff>:/icons/icons/user.png</iconset>
         </property>
-        <property name="scaledContents">
-         <bool>true</bool>
-        </property>
-       </widget>
-       <widget class="QFrame" name="notiLamp">
-        <property name="geometry">
-         <rect>
-          <x>35</x>
-          <y>8</y>
-          <width>16</width>
-          <height>16</height>
-         </rect>
-        </property>
-        <property name="maximumSize">
+        <property name="iconSize">
          <size>
-          <width>966</width>
-          <height>54</height>
+          <width>25</width>
+          <height>25</height>
          </size>
         </property>
+       </widget>
+       <widget class="QLabel" name="main_name_1">
+        <property name="geometry">
+         <rect>
+          <x>55</x>
+          <y>5</y>
+          <width>106</width>
+          <height>45</height>
+         </rect>
+        </property>
         <property name="styleSheet">
-         <string notr="true">background-color: #F23636;
-border-radius: 8px</string>
+         <string notr="true">color: rgb(255, 255, 255);</string>
         </property>
-        <property name="frameShape">
-         <enum>QFrame::StyledPanel</enum>
+        <property name="text">
+         <string>Добро пожаловать!</string>
         </property>
-        <property name="frameShadow">
-         <enum>QFrame::Raised</enum>
+        <property name="wordWrap">
+         <bool>true</bool>
         </property>
        </widget>
       </widget>
@@ -1426,9 +1292,9 @@ color:Black;
      <widget class="QFrame" name="notif_2">
       <property name="geometry">
        <rect>
-        <x>550</x>
+        <x>520</x>
         <y>20</y>
-        <width>106</width>
+        <width>171</width>
         <height>54</height>
        </rect>
       </property>
@@ -1448,94 +1314,50 @@ border-radius: 27px;</string>
       <property name="frameShadow">
        <enum>QFrame::Raised</enum>
       </property>
-      <widget class="QFrame" name="photoUser_7">
+      <widget class="QPushButton" name="main_ico_2">
        <property name="geometry">
         <rect>
-         <x>60</x>
-         <y>7</y>
-         <width>40</width>
-         <height>40</height>
+         <x>5</x>
+         <y>5</y>
+         <width>44</width>
+         <height>44</height>
         </rect>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>966</width>
-         <height>54</height>
-        </size>
        </property>
        <property name="styleSheet">
         <string notr="true">background-color: #A3EC5A;
-border-radius: 20px</string>
-       </property>
-       <property name="frameShape">
-        <enum>QFrame::StyledPanel</enum>
-       </property>
-       <property name="frameShadow">
-        <enum>QFrame::Raised</enum>
-       </property>
-       <widget class="QLabel" name="user_ico2">
-        <property name="geometry">
-         <rect>
-          <x>0</x>
-          <y>0</y>
-          <width>40</width>
-          <height>40</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string/>
-        </property>
-        <property name="pixmap">
-         <pixmap resource="VEDA1.qrc">:/icons/icons/user.png</pixmap>
-        </property>
-        <property name="scaledContents">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </widget>
-      <widget class="QLabel" name="label_26">
-       <property name="geometry">
-        <rect>
-         <x>15</x>
-         <y>7</y>
-         <width>35</width>
-         <height>38</height>
-        </rect>
+border-radius: 22px</string>
        </property>
        <property name="text">
         <string/>
        </property>
-       <property name="pixmap">
-        <pixmap resource="VEDA1.qrc">:/icons/icons/noti.png</pixmap>
+       <property name="icon">
+        <iconset resource="VEDA1.qrc">
+         <normaloff>:/icons/icons/user.png</normaloff>:/icons/icons/user.png</iconset>
        </property>
-       <property name="scaledContents">
-        <bool>true</bool>
-       </property>
-      </widget>
-      <widget class="QFrame" name="notiLamp_2">
-       <property name="geometry">
-        <rect>
-         <x>35</x>
-         <y>8</y>
-         <width>16</width>
-         <height>16</height>
-        </rect>
-       </property>
-       <property name="maximumSize">
+       <property name="iconSize">
         <size>
-         <width>966</width>
-         <height>54</height>
+         <width>25</width>
+         <height>25</height>
         </size>
        </property>
+      </widget>
+      <widget class="QLabel" name="main_name_2">
+       <property name="geometry">
+        <rect>
+         <x>55</x>
+         <y>5</y>
+         <width>106</width>
+         <height>45</height>
+        </rect>
+       </property>
        <property name="styleSheet">
-        <string notr="true">background-color: #F23636;
-border-radius: 8px</string>
+        <string notr="true">color: rgb(255, 255, 255);</string>
        </property>
-       <property name="frameShape">
-        <enum>QFrame::StyledPanel</enum>
+       <property name="text">
+        <string>Добро пожаловать!</string>
        </property>
-       <property name="frameShadow">
-        <enum>QFrame::Raised</enum>
+       <property name="wordWrap">
+        <bool>true</bool>
        </property>
       </widget>
      </widget>
@@ -1899,7 +1721,7 @@ border: none;
 }</string>
       </property>
       <property name="currentIndex">
-       <number>4</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="admin">
        <attribute name="title">
@@ -3074,7 +2896,7 @@ QPushButton:hover{
           <string notr="true"/>
          </property>
          <property name="currentIndex">
-          <number>1</number>
+          <number>0</number>
          </property>
          <widget class="QWidget" name="data">
           <attribute name="title">
@@ -5512,7 +5334,7 @@ background-color: rgb(163, 236, 90);
       <x>360</x>
       <y>340</y>
       <width>346</width>
-      <height>291</height>
+      <height>0</height>
      </rect>
     </property>
     <property name="sizePolicy">
